add title and new styles in list

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   </head>
   <body>
     <header class="navbar">
+      <div class="title">
+        Little Odin
+      </div>
       <div>
         <div class="menu-icon" onclick="toggleMenu()">
           <!-- Ícono de menú hamburguesa -->
@@ -32,12 +35,12 @@
       </div>
 
       <ul class="navbar_menu" id="navbar_menu">
-        <li class="navbar_text">
+        <!-- <li class="navbar_text">
           <span class="material-symbols-outlined navbar_link">
           settings
           </span>
           <span class="text_span"> Settings</span>
-        </li>
+        </li> -->
         <li class="navbar_text">
           <span class="material-symbols-outlined navbar_link">
             g_translate
@@ -61,9 +64,10 @@
     </header>
 
      <section id="#" class="mainTitle">
-      <h2>Soy Manuel Alcázar alias <span>LITTLE ODIN</span> </h2>
-      <p>Fan de la mitología nórdica</p>
+      <h2>Soy Manuel Alcázar</h2>
+      <p>Fan de la mitología nórdica y <b>Programador junior</b>   </p>
       <p>En este menú puedes acceder a todos los proyectos, a una descripción de mi experiencia, a mi CV completo</p>
+      <p>Portfolio creado con <b>Javascript</b> </p>
     </section>
     <section class="bg-image">
     <section class="menuProjects" id="projectList">
@@ -95,6 +99,8 @@
           <div id="titulo-exposicion"></div>
           <div id="parrafo-exposicion"></div>
           <div id="stack-list" class="stack-list"></div>
+          <a class="url-project" id="url-project"></a>
+
         </div>
 
       </div>
