add button Logic

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
           <div id="parrafo-exposicion"></div>
           <div id="stack-list" class="stack-list"></div>
           <a class="url-project" id="url-project"></a>
+          <button class="btn-desplazamiento" id="boton-desplazamiento">Volver al menú</button>
 
         </div>
 
