--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link id="theme-stylesheet" rel="stylesheet" href="stylesClaro.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -47,17 +47,17 @@
             </span>
             <span class="text_span"> Translate</span>
         </li>
-        <li class="navbar_text">
+        <!-- <li class="navbar_text">
           <span class="material-symbols-outlined navbar_link">
             light_mode
             </span>
-            <span class="text_span"> Light Mode</span>
-        </li>
-        <li class="navbar_text">
+            <span class="text_span" id="cambiar-claro"> Light Mode</span>
+        </li> -->
+        <li class="navbar_text" id="cambiar-oscuro">
           <span class="material-symbols-outlined navbar_link">
             dark_mode
             </span>
-            <span class="text_span"> Dark Mode</span>
+            <span class="text_span" id="cambiar-oscuro"> Claro / Oscuro</span>
 
         </li>
       </ul>
