--- a/index.html
+++ b/index.html
@@ -65,10 +65,18 @@
     </header>
 
      <section id="#" class="mainTitle">
-      <h2>Soy Manuel Alcázar</h2>
-      <p>Fan de la mitología nórdica y <b>Programador junior</b>   </p>
-      <p>En este menú puedes acceder a todos los proyectos, a una descripción de mi experiencia, a mi CV completo</p>
-      <p>Portfolio creado con <b>Javascript</b> </p>
+      <!-- <div class="main-border-photo2">
+        <img class="main-photo2" src="./assets/IMG-20210822-WA0004.jpg" alt=""></div> -->
+      <div class="main-text">
+        <h2>Soy Manuel Alcázar</h2>
+        <p>Fan de la mitología nórdica y <b>Programador junior</b>   </p>
+        <p>En este menú puedes acceder a todos los proyectos, a una descripción de mi experiencia, a mi CV completo</p>
+        <p>Portfolio creado con <b>Javascript</b> </p>
+      </div>
+
+      <div class="main-border-photo">
+        <img class="main-photo" src="./assets/IMG-20210822-WA0004.jpg" alt=""></div>
+      <div>
     </section>
     <section class="bg-image">
     <section class="menuProjects" id="projectList">
@@ -97,7 +105,6 @@
           <button class="btn-desplazamiento" id="boton-desplazamiento">Volver al menú &uarr;</button>
 
         </div>
-
       </div>
     </section>
   </section>
