--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="main-text">
         <h2>Soy Manuel Alcázar</h2>
         <p>Fan de la mitología nórdica y <b>Programador junior</b>   </p>
-        <p>En este menú puedes acceder a todos los proyectos, a una descripción de mi experiencia, a mi CV completo</p>
+        <p>En este menú puedes acceder a todos mis proyectos, a una descripción de mi experiencia, a mi CV completo</p>
         <p>Portfolio creado con <b>Javascript</b> </p>
       </div>
 
@@ -81,11 +81,11 @@
     <section class="bg-image">
     <section class="menuProjects" id="projectList">
       <section class="menuProjects">
-        <div id="experiencia" class="div-experience div-item">
+        <div id="experiencia" class="div-experience ">
           <img src="./assets/experience.svg" alt="OSFimage" />
           <span class="text_span"> Experiencia</span>
         </div>
-        <div id="studies" class="div-studies div-item">
+        <div id="studies" class="div-experience">
           <img src="./assets/info.svg" alt="OSFimage" />
           <span class="text_span"> Estudios</span>
         </div>
@@ -106,6 +106,9 @@
 
         </div>
       </div>
+    </section>
+    <section id="divDos" class="divDos">
+
     </section>
   </section>
     <script src="scripts.js" type="text/javascript"></script>
