--- a/index.html
+++ b/index.html
@@ -65,44 +65,41 @@
     </header>
 
      <section id="#" class="mainTitle">
-      <!-- <div class="main-border-photo2">
-        <img class="main-photo2" src="./assets/IMG-20210822-WA0004.jpg" alt=""></div> -->
       <div class="main-text">
-        <h2>Soy Manuel Alcázar</h2>
-        <p>Fan de la mitología nórdica y <b>Programador junior</b>   </p>
-        <p>En este menú puedes acceder a todos mis proyectos, a una descripción de mi experiencia, a mi CV completo</p>
-        <p>Portfolio creado con <b>Javascript</b> </p>
+        <h2>Soy Manuel Alcázar Patiño</h2>
+        <p>Fan de la mitología nórdica y <b>Programador FullStack junior</b>   </p>
+        <p>Desliza y conocerás un poco más de mi</p>
       </div>
-
-      <div class="main-border-photo">
         <img class="main-photo" src="./assets/IMG-20210822-WA0004.jpg" alt=""></div>
-      <div>
     </section>
     <section class="bg-image">
     <section class="menuProjects" id="projectList">
       <section class="menuProjects">
         <div id="experiencia" class="div-experience ">
-          <img src="./assets/experience.svg" alt="OSFimage" />
+          <img src="./assets/experience.svg" alt="experience" />
           <span class="text_span"> Experiencia</span>
         </div>
         <div id="studies" class="div-experience">
-          <img src="./assets/info.svg" alt="OSFimage" />
+          <img src="./assets/info.svg" alt="studies" />
           <span class="text_span"> Estudios</span>
+        </div>
+        <div id="contact" class="div-experience">
+          <img src="./assets/contact.svg" alt="contact" />
+          <span class="text_span"> Contacto</span>
         </div>
       </section>
     </section>
    
 
 
-    <section id="projects">
+    <section id="projects" style="display: none;">
       <div class="fondoDiv">
-        <div class="card-projects">
+        <div class="card-projects" >
 
           <div id="titulo-exposicion"></div>
           <div id="parrafo-exposicion"></div>
           <div id="stack-list" class="stack-list"></div>
-          <a class="url-project" id="url-project"></a>
-          <button class="btn-desplazamiento" id="boton-desplazamiento">Volver al menú &uarr;</button>
+          <a target="_blank" class="url-project" id="url-project"></a>
 
         </div>
       </div>
@@ -110,7 +107,13 @@
     <section id="divDos" class="divDos">
 
     </section>
+
   </section>
+  <footer class="footer">
+    <button class="btn-desplazamiento" id="boton-desplazamiento">Volver al menú &uarr;</button>
+    <p class="text-footer" >Portfolio creado con <b>Javascript</b> </p>
+    <p class="text-footer" >By <b>LITTLE ODIN</b> </p>
+  </footer>
     <script src="scripts.js" type="text/javascript"></script>
     <script src="functions.js" type="text/javascript"></script>
 
