fix scroll contact

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </section>
 
   </section>
-  <footer class="footer">
+  <footer class="footer" id="footerScroll">
     <button class="btn-desplazamiento" id="boton-desplazamiento">Volver al menú &uarr;</button>
     <p class="text-footer" >Portfolio creado con <b>Javascript</b> </p>
     <p class="text-footer" >By <b>LITTLE ODIN</b> </p>
