add new style Cards

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   </head>
   <body>
     <header class="navbar">
@@ -92,19 +96,22 @@
    
 
 
-    <section id="projects" style="display: none;">
+    <section id="projects"  style="display: none;">
       <div class="fondoDiv">
-        <div class="card-projects" >
-
+        <div class="card-projects " >
           <div id="titulo-exposicion"></div>
-          <div id="parrafo-exposicion"></div>
-          <div id="stack-list" class="stack-list"></div>
+          <div class="ordenCard">
+            <div id="parrafo-exposicion"></div>
+            <div id="stack-list" class="stack-list"></div>
+          </div>
+
+
           <a target="_blank" class="url-project" id="url-project"></a>
 
         </div>
       </div>
     </section>
-    <section id="divDos" class="divDos">
+    <section id="divDos" class="divDos animate__animated animate__fadeIn">
 
     </section>
 
